POWR-426 Update page template to really check if there is no sidebar

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -114,7 +114,7 @@
           {{ page.tabs }}
         </div>
       {% endblock %}
-    {% endif %}    
+    {% endif %}
     {% if page.highlighted %}
       <div class="highlighted">
         <aside class="{{ container }} section clearfix" role="complementary">
@@ -126,26 +126,23 @@
       {% block content %}
         <div id="main" class="{{ container }}">
           <div class="row row-offcanvas row-offcanvas-left clearfix">
-              <main{{ content_attributes }}>
-                <section class="section">
-                  <a id="main-content" tabindex="-1"></a>
-                  {{ page.content }}
-                </section>
-              </main>
-            {% if page.sidebar_first %}
+            <main{{ content_attributes }}>
+              <section class="section">
+                <a id="main-content" tabindex="-1"></a>
+                {{ page.content }}
+              </section>
+            </main>
+            {% if page.sidebar_first|render|striptags|trim is not empty %}
               <div{{ sidebar_first_attributes }}>
-                <aside class="section" role="complementary">
+                <aside role="complementary">
                   {{ page.sidebar_first }}
                 </aside>
               </div>
             {% endif %}
-            {% set sidebar_second = page.sidebar_second|render %}
-            {% if sidebar_second %}
-               <div{{ sidebar_second_attributes }}>
-                <aside class="section" role="complementary">
-                  {{ sidebar_second }}
-                </aside>
-              </div>
+            {% if page.sidebar_second|render|striptags|trim is not empty %}
+              <aside{{ sidebar_second_attributes }} role="complementary">
+                {{ page.sidebar_second }}
+              </aside>
             {% endif %}
           </div>
         </div>
