POWR-426 Update step instructions to use simpler structure

--- a/web/themes/custom/cloudy/templates/field/field--paragraph--field-step-by-step-instructions.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--paragraph--field-step-by-step-instructions.html.twig
@@ -10,13 +10,11 @@
  */
 #}
 
-{% if items|length == 1 %}
-  <div class="onestep">{{ items[0].content }}</div>
-{% else %}
-  <ol class="steps">
-    {%- for item in items -%}
-      <li class="step">{{ item.content }}</li>
-    {%- endfor -%}
-  </ol>
-{% endif %}
+<ol class="steps">
+  {%- for item in items -%}
+    <li class="step">
+      {{ item.content }}
+    </li>
+  {%- endfor -%}
+</ol>
 
