POWR-426 Clean up styles that are handled in template now

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -16,13 +16,14 @@ body {
 
 p {
   line-height: $line-height-lg;
-  margin-bottom: $spacer * 1.5;
-}
-
-.lead {
-  color: $gray-600;
-  margin-bottom: $spacer * 2.5;
-  line-height: $line-height-sm;
+  &:not(:last-child) {
+    margin-bottom: $spacer * 1.5;
+  }
+  &.lead {
+    color: $gray-600;
+    margin-bottom: $spacer * 2;
+    line-height: $line-height-sm;
+  }
 }
 
 h1 {
@@ -56,12 +57,6 @@ a {
 
 .site-name-slogan a {
     text-decoration: none;
-}
-
-.card-group img {
-    margin: 0;
-    width: 100%;
-    height: auto;
 }
 
 .card-group .field--type-image {
@@ -129,21 +124,26 @@ li.step {
 
 
 li.step {
-  &:before {
-    content: counter(step-counter);
-    position: absolute;
-    left: 0;
-    top: 0;
-    font-size: 1.5rem;
-    border: 1px #909090 solid;
-    color: #505050;
-    font-weight: 400;
-    padding: .3rem 1rem;
-    border-radius: 50%;
-  }
-  > * {
-    position: relative;
-    margin-left: 4rem;
+  position: relative;
+  counter-increment: step-counter;
+  margin-bottom: 1rem;
+  &:not(:only-child) {
+    &:before {
+      content: counter(step-counter);
+      position: absolute;
+      left: 0;
+      top: 0;
+      font-size: 1.5rem;
+      border: 1px #909090 solid;
+      color: #505050;
+      font-weight: 400;
+      padding: .3rem 1rem;
+      border-radius: 50%;
+    }
+    > * {
+      position: relative;
+      margin-left: 4rem;
+    }
   }
   .step-title {
     margin-bottom: $spacer * 1.25;
@@ -293,14 +293,6 @@ ul.pagination {
   color: #505050;
 }
 
-.paragraph {
-  margin-bottom: $spacer * 1.75;
-}
-
-div.paragraph--type--document {
-  margin-bottom: 1rem;
-}
-
 blockquote.blockquote {
   border-left: 5px solid $gray-300;
   padding-left: 1rem;
@@ -350,8 +342,4 @@ span.mailto::before {
 
 .view-top-searches .item-list ul li:last-child {
   padding-right: 0;
-}
-
-h2, h3, h4, h5, h6, p, blockquote, hr, .list-group-item, .paragraph ul, .paragraph ol, .figure-caption {
-  max-width: 729px;
 }
