POWR-426 Missed application of classes variable to paragraph element

--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph.html.twig
@@ -51,7 +51,7 @@
 ]) %}
 
 {% block paragraph %}
-  <div{{ attributes.addClass(paragraph_classes) }}>
+  <div{{ attributes.addClass(paragraph_classes).addClass(classes) }}>
     {% block content %}
       {{ content }}
     {% endblock %}
