POWR-518 alerts bootstrapped, reordered, color classes removed (wip)

--- a/web/modules/custom/portland/templates/portland-alert.html.twig
+++ b/web/modules/custom/portland/templates/portland-alert.html.twig
@@ -66,7 +66,7 @@
   type == '30' ? 'btn-outline-secondary' :'',
 ] %}
 
-<div{{ attributes.addClass(classes).addClass(alert_classes) }}  data-nid="{{ nid }}" data-changed="{{ changed_timestamp }}" role="alert">
+{# <div{{ attributes.addClass(classes).addClass(alert_classes) }}  data-nid="{{ nid }}" data-changed="{{ changed_timestamp }}" role="alert">
   <div{{ header_attribute.addClass(header_classes) }}>
     <i{{ icon_attribute.addClass(icon_classes) }}></i>
     <span class="ml-2 flex-grow-1">
@@ -92,5 +92,33 @@
         </a>
       </div>
     {% endif %}
+  </div>
+</div> #}
+
+<div class="container-fluid">
+  <div class="container alert alert-dismissible" {{ attributes.addClass(classes).addClass(alert_classes) }} data-nid="{{ nid }}" data-changed="{{ changed_timestamp }}" role="alert" aria-live="polite">
+      <p class="h5 alert-heading">
+      <i{{ icon_attribute.addClass(icon_classes) }}></i>
+        {% if title %}
+          <strong>{{ title }}</strong>
+        {% endif %}
+      </p>
+      <p class="mb-0">
+        {{ text }}
+      </p>
+      <hr>
+      <small>{{ changed }}</small>
+      
+      {% if link_url %}
+        <div class="d-flex justify-content-around">
+          <a{{ link_attribute.addClass(link_classes).setAttribute('href', link_url) }}>
+            {{ link_text }}
+          </a>
+        </div>
+      {% endif %}
+      {% if dismissible == 1 %}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">Dismiss</span></button>
+      {% endif %}
+    </div>
   </div>
 </div>
