--- a/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
+++ b/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
@@ -34,3 +34,8 @@ $headings-line-height: 1.25;
 
 // Line heights
 $line-height-lg: 1.6;
+
+// Close 
+$close-font-size: 1rem;
+$close-font-weight: 500;
+$close-color: $link-color;
