--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -355,3 +355,24 @@ span.mailto::before {
 h2, h3, h4, h5, h6, p, blockquote, hr, .list-group-item, .paragraph ul, .paragraph ol, .figure-caption {
   max-width: 729px;
 }
+
+.alert-dismissible {
+  padding-right: ($close-font-size + $alert-padding-x * 4);
+  
+  // Adjust close link position
+  .close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: ($alert-padding-y * 1.25) $alert-padding-x;
+    color: $link-color;
+    text-shadow: none;
+    opacity: 1;
+    &:not(:disabled):not(.disabled) {
+      @include hover-focus {
+        color: $link-hover-color;
+        opacity: 1;
+      }
+    }
+  }
+}
