POWR-426 Pass view mode unaltered to the template to allow full width to just work

--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph.html.twig
@@ -45,7 +45,7 @@
 {% set paragraph_classes = paragraph_classes|default([
   'paragraph',
   'paragraph--type--' ~ paragraph.bundle|clean_class,
-  view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
+  view_mode|clean_class,
   not paragraph.isPublished() ? 'paragraph--unpublished',
   'mb-' ~ margin,
 ]) %}
