--- a/web/themes/custom/cloudy/templates/field/field.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field.html.twig
@@ -47,16 +47,22 @@
     'field--type-' ~ field_type|clean_class,
     'field--label-' ~ label_display,
     'mb-' ~ margin,
+    label_display == 'inline' ? 'd-flex'
   ]
 %}
 
 {%
   set title_classes = title_classes|default([
     label_display == 'visually_hidden' ? 'sr-only',
+    label_display == 'inline' ? 'mr-1',
   ])
 %}
 
-{% set item_classes = item_classes|default([]) %}
+{%
+  set item_classes = item_classes|default([
+    label_display == 'inline' ? 'mr-1',
+  ])
+%}
 
 {% spaceless %}
   {% block field %}
