POWR-426 Add a full-width class to break elements out of their container

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -102,6 +102,17 @@ a {
   text-decoration: none;
 }
 
+// Utilities, or view modes
+
+.full-width {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+}
+
 // Site name
 
 .site-name-slogan a {
@@ -160,6 +171,10 @@ ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
 }
 
 // Paragraph buttons
+
+.btn {
+  white-space: normal;
+}
 
 .btn-cta {
   @extend .btn;
