POWR-518 modified alerts template and view

--- a/web/modules/custom/portland/templates/portland-alert.html.twig
+++ b/web/modules/custom/portland/templates/portland-alert.html.twig
@@ -97,18 +97,15 @@
 
 <div class="container-fluid">
   <div class="container alert alert-dismissible" {{ attributes.addClass(classes).addClass(alert_classes) }} data-nid="{{ nid }}" data-changed="{{ changed_timestamp }}" role="alert" aria-live="polite">
-      <p class="h5 alert-heading">
+      <div class="h5 alert-heading">
       <i{{ icon_attribute.addClass(icon_classes) }}></i>
         {% if title %}
           <strong>{{ title }}</strong>
         {% endif %}
-      </p>
-      <p class="mb-0">
-        {{ text }}
-      </p>
-      <hr>
-      <small>{{ changed }}</small>
-      
+      </div>
+      <div class="mb-0">
+        {{ text }} {{ changed }}
+      </div>
       {% if link_url %}
         <div class="d-flex justify-content-around">
           <a{{ link_attribute.addClass(link_classes).setAttribute('href', link_url) }}>
@@ -117,7 +114,7 @@
         </div>
       {% endif %}
       {% if dismissible == 1 %}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">Dismiss</span></button>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Dismiss notification"><span aria-hidden="true">Dismiss</span></button>
       {% endif %}
     </div>
   </div>
