--- a/web/themes/custom/cloudy/scss/components/_alerts.scss
+++ b/web/themes/custom/cloudy/scss/components/_alerts.scss
@@ -3,25 +3,23 @@
  * Visual styles for alerts in Cloudy.
  */
 
-.portland-alert {
-  .close {
-    font-size: 2rem;
-    color: inherit;
-    opacity: 1;
-    text-shadow: none;
-    &:not(:disabled):not(.disabled):hover {
-      color: inherit;
-      opacity: 1;
-    }
-  }
-  .fa {
-    font-size: 2rem;
-  }
-  .btn {
-    white-space: inherit;
-  }
-}
-
 .block-views-blockalerts-block-1 {
   width: 100%;
+}
+
+.portland-alert {
+  
+  // Adjust close link position
+  .close {
+    position: relative;
+    text-shadow: none;
+    white-space: nowrap;
+    opacity: 1;
+    &:not(:disabled):not(.disabled) {
+      @include hover-focus {
+        color: inherit;
+        opacity: 1;
+      }
+    }
+  }
 }
