POWR-518 update pills and add container class to navbar

--- a/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
+++ b/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
@@ -39,3 +39,7 @@ $line-height-lg: 1.6;
 $close-font-size: 1rem;
 $close-font-weight: 500;
 $close-color: $link-color;
+
+// Nav 
+$nav-pills-border-radius: 0;
+$nav-pills-link-active-bg: #000;
