--- a/web/themes/custom/cloudy/scss/components/_views.scss
+++ b/web/themes/custom/cloudy/scss/components/_views.scss
@@ -44,3 +44,8 @@
 .views-ui-display-tab-actions .dropbutton .form-submit:focus {
     color: $link-color;
 }
+
+.block-views-blockcontent-by-taxonomy-menu-block-1,
+.block-views-blockgroups-by-topic-block-2 {
+    @extend .d-inline-block;
+}
