POWR-426 Remove column from form elements so they don't indent

--- a/web/themes/custom/cloudy/templates/form/form-element.html.twig
+++ b/web/themes/custom/cloudy/templates/form/form-element.html.twig
@@ -104,7 +104,7 @@
     {{ label }}
   {% endif %}
 {% else %}
-  <div{{ attributes.addClass(classes, 'form-group col-auto') }}>
+  <div{{ attributes.addClass(classes, 'form-group') }}>
     {% if label_display in ['before', 'invisible'] %}
       {{ label }}
     {% endif %}
