POWR-426 Remove margin from full width paragraph in a step

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -155,6 +155,9 @@ li.step {
       position: relative;
       margin-left: 4rem;
     }
+    .paragraph--type--full-width-container {
+      margin-left: -4rem;
+    }
   }
   .step-title {
     margin-bottom: $spacer * 1.25;
