Set service step card deck cards to layout max two across

--- a/web/themes/custom/cloudy/scss/components/_components.scss
+++ b/web/themes/custom/cloudy/scss/components/_components.scss
@@ -3,6 +3,7 @@
 @import "_book";
 @import "_book-navigation";
 @import "_breadcrumb";
+@import "_card";
 @import "_columns";
 @import "_comments";
 @import "_contextual";
