Set single service cards to take up the full width

--- a/web/themes/custom/cloudy/scss/components/_card.scss
+++ b/web/themes/custom/cloudy/scss/components/_card.scss
@@ -1,4 +1,7 @@
 .node--type-city-service {
+  .card:not(:first-child) {
+    max-width: calc(50% - 30px);
+  }
   .card {
     flex-basis: calc(50% - 30px);
       @include media-breakpoint-up(sm) {
