Test Circle CI gulp build task

--- a/web/themes/custom/cloudy/scss/components/_card.scss
+++ b/web/themes/custom/cloudy/scss/components/_card.scss
@@ -3,6 +3,7 @@
     max-width: calc(50% - 30px);
   }
   .card {
+    color: red;
     flex-basis: calc(50% - 30px);
       @include media-breakpoint-up(sm) {
         margin-bottom: $card-deck-margin;
