Test Circle CI gulp build task and refactor card styles

--- a/web/themes/custom/cloudy/scss/components/_card.scss
+++ b/web/themes/custom/cloudy/scss/components/_card.scss
@@ -1,19 +1,18 @@
 .node--type-city-service {
-  .card:not(:first-child) {
-    max-width: calc(50% - 30px);
-  }
   .card {
-    color: red;
-    flex-basis: calc(50% - 30px);
-      @include media-breakpoint-up(sm) {
-        margin-bottom: $card-deck-margin;
-      }
-      @include media-breakpoint-only(md) {
-        flex-basis: 100%;
-        flex-direction: row;
-      }
-    @include media-breakpoint-up(lg) {
-      flex-wrap: wrap;
+    &:first-child {
+      max-width: 100%;
+    }
+
+    @include media-breakpoint-up(sm) {
+      flex-basis: calc(50% - 30px);
+      max-width: calc(50% - 30px);
+      margin-bottom: $card-deck-margin;
+    }
+
+    @include media-breakpoint-only(md) {
+      max-width: 100%;
+      flex-basis: 100%;
     }
   }
 }
