POWR-551 - Added role="banner" to site header

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -70,7 +70,7 @@
 <div id="page-wrapper">
   <div id="page">
     <div class="container-fluid">{{ page.top_header }}</div>
-    <header id="header" class="header" aria-label="{{ 'Site header'|t}}">
+    <header id="header" class="header" aria-label="{{ 'Site header'|t}}" role="banner">
       {% block head %}
         <nav{{ navbar_attributes }}>
           {% if container_navbar %}
