--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -108,7 +108,7 @@
         </div>
       {% endblock %}
     {% endif %}
-    {% if page.tabs %}
+    {% if page.tabs|render|striptags|trim|length > 0 %}
       {% block tabs %}
         <div class="tabs container-fluid bg-light" role="navigation">
           {{ page.tabs }}
