--- a/web/themes/custom/cloudy/scss/components/_card.scss
+++ b/web/themes/custom/cloudy/scss/components/_card.scss
@@ -5,14 +5,15 @@
     }
 
     @include media-breakpoint-up(sm) {
-      flex-basis: calc(50% - 30px);
-      max-width: calc(50% - 30px);
-      margin-bottom: $card-deck-margin;
+      flex-basis: calc(50% - #{$card-deck-margin * 2});
+      max-width: calc(50% - #{$card-deck-margin * 2});
+      margin-bottom: $card-deck-margin * 2;
     }
 
     @include media-breakpoint-only(md) {
       max-width: 100%;
       flex-basis: 100%;
+      margin-bottom: $card-deck-margin;
     }
   }
 }
