POWR-552 - reverted the fix for 552; it doesn't work and is not possible due to a bug in D8.

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -108,7 +108,7 @@
         </div>
       {% endblock %}
     {% endif %}
-    {% if page.tabs|render|striptags|trim|length > 0 %}
+    {% if page.tabs %}
       {% block tabs %}
         <div class="tabs container-fluid bg-light" role="navigation">
           {{ page.tabs }}
