POWR-552 - reapplied logic to hide empty tabs region; only works if template debugging is off.

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -108,10 +108,11 @@
         </div>
       {% endblock %}
     {% endif %}
-    {% if page.tabs %}
+    {% set tabs = page.tabs|render %}
+    {% if tabs %}
       {% block tabs %}
         <div class="tabs container-fluid bg-light" role="navigation">
-          {{ page.tabs }}
+          {{ tabs }}
         </div>
       {% endblock %}
     {% endif %}    
