POWR-580 - moved "Skip to main content link" below Top Header region, so that it appears below alerts; fixed an HTML error in portland-alert.html.twig that was breaking the HTML structure and prematurely closing div#page.

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -70,6 +70,9 @@
 <div id="page-wrapper">
   <div id="page">
     <div class="container-fluid">{{ page.top_header }}</div>
+    <a href="#main" class="visually-hidden focusable skip-link">
+        {{ 'Skip to main content'|t }}
+    </a>
     <header id="header" class="header" aria-label="{{ 'Site header'|t}}" role="banner">
       {% block head %}
         <nav{{ navbar_attributes }}>
