POWR-426 reapply most of Mike's work without new full width paragraph types.

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -16,13 +16,14 @@ body {
 
 p {
   line-height: $line-height-lg;
-  margin-bottom: $spacer * 1.5;
-}
-
-.lead {
-  color: $gray-600;
-  margin-bottom: $spacer * 2.5;
-  line-height: $line-height-sm;
+  &:not(:last-child) {
+    margin-bottom: $spacer * 1.5;
+  } 
+  &.lead {
+    color: $gray-600;
+    margin-bottom: $spacer * 2;
+    line-height: $line-height-sm;
+  }
 }
 
 h1 {
@@ -107,6 +108,17 @@ a {
   text-decoration: none;
 }
 
+// Utilities
+
+.full-width {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+}
+
 // Site name
 
 .site-name-slogan a {
@@ -161,6 +173,10 @@ ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
 
 // Paragraph buttons
 
+.btn {
+  white-space: normal;
+}
+
 .btn-cta {
   @extend .btn;
   @extend .btn-primary;
@@ -186,7 +202,6 @@ ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
     box-shadow: none;
   }
 }
-
 
 *[class*="btn--"]:before {
   display: inline-block;
@@ -355,4 +370,3 @@ span.mailto::before {
 h2, h3, h4, h5, h6, p, blockquote, hr, .list-group-item, .paragraph ul, .paragraph ol, .figure-caption {
   max-width: 729px;
 }
-
