--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -118,7 +118,7 @@
           {{ tabs }}
         </div>
       {% endblock %}
-    {% endif %}    
+    {% endif %}
     {% if page.highlighted %}
       <div class="highlighted">
         <aside class="{{ container }} section clearfix" role="complementary">
@@ -135,6 +135,7 @@
                   {{ page.content }}
                 </section>
               </main>
+            {% set sidebar_first = page.sidebar_first|render %}
             {% if page.sidebar_first %}
               <div{{ sidebar_first_attributes }}>
                 <aside class="section" role="complementary">
