--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--card-deck.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--card-deck.html.twig
@@ -1,10 +1,7 @@
-{% extends 'paragraph.html.twig' %}
-{% block paragraph %}
-  {% block field %}
-    {% block content %}
-        <div {{ attributes.addClass('card-deck') }}>
-        {{ content }}
-        </div>
-    {% endblock %}
-  {% endblock %}
-{% endblock %}
+{% embed 'paragraph.html.twig' with {
+  'classes' : [
+    'card-deck',
+    'mb-3',
+  ],
+} %}
+{% endembed %}
