Update the search blocks to default to override from there.

--- a/web/themes/custom/tweme/scss/components/_form.scss
+++ b/web/themes/custom/tweme/scss/components/_form.scss
@@ -14,3 +14,18 @@
     height: ($input-height / 2);
     margin: 0 0.3em;
 }
+
+input[type="search"] {
+    box-sizing: border-box;
+}
+
+input.button,
+.form-actions {
+  color: #505050;
+  background: $light;
+  border: 1px solid #ced4da;
+}
+
+input.form-search {
+  border: 1px solid #ced4da;
+}
