POWR-536 Modify regions and clean up page template

--- a/web/themes/custom/tweme/templates/layout/page.html.twig
+++ b/web/themes/custom/tweme/templates/layout/page.html.twig
@@ -34,74 +34,65 @@
  *
  */
 #}
-<div id="page-wrapper">
-  <div id="page">
-    <div class="container-fluid">{{ page.pre_header }}</div>
-    <a href="#main" class="visually-hidden focusable skip-link">
-        {{ 'Skip to main content'|t }}
-    </a>
-    <header id="header" class="header" aria-label="{{ 'Site header'|t}}" role="banner">
-      {% block head %}
-        <nav class="navbar navbar-dark navbar-expand-lg" id="navbar-main">
-          <div class="container">
-            {{ page.header }}
-            {% if page.primary_menu or page.header_form %}
-              <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation">Menu</button>
-              <div class="collapse navbar-collapse justify-content-end" id="CollapsingNavbar">
-                {{ page.primary_menu }}
-                {% if page.header_form %}
-                  <div class="form-inline navbar-form">
-                    {{ page.header_form }}
-                  </div>
-                {% endif %}
-	          </div>
-            {% endif %}
-          </div>
-        </nav>
-      {% endblock %}
-    </header>
-    {% set tabs = page.tabs|render %}
-    {% if tabs %}
-      {% block tabs %}
-        <div class="tabs container-fluid bg-light" role="navigation">
-          {{ tabs }}
+{% set global_admin = page.global_admin|render %}
+{% if global_admin %}
+  {{ page.global_admin }}
+{% endif %}
+<section>
+  {{ page.pre_header }}
+</section>
+<a href="#main" class="visually-hidden focusable skip-link">
+    {{ 'Skip to main content'|t }}
+</a>
+<header id="header" class="header" aria-label="{{ 'Site header'|t}}" role="banner">
+  <nav class="navbar navbar-dark navbar-expand-lg" id="navbar-main">
+    <div class="container">
+      {{ page.header }}
+      {% if page.primary_menu or page.header_form %}
+        <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="{{ 'Toggle navigation'|t }}">{{ 'Menu'|t }}</button>
+        <div class="collapse navbar-collapse justify-content-end" id="CollapsingNavbar">
+          {{ page.primary_menu }}
+          {% set header_form = page.header_form|render %}
+          {% if header_form %}
+            <div class="form-inline navbar-form">
+              {{ page.header_form }}
+            </div>
+          {% endif %}
         </div>
-      {% endblock %}
-    {% endif %}
-    {% if page.messages %}
-      {{ page.messages }}
-    {% endif %}
-    {% if page.pre_content %}
-        {{ page.pre_content }}
-    {% endif %}
-    <div id="main-wrapper" class="layout-main-wrapper clearfix">
-      {% block content %}
-        <div id="main" class="container">
-          <div class="row row-offcanvas row-offcanvas-left clearfix">
-              <main class="main-content col" id="content" role="main">
-                <section class="section">
-                  {{ page.content }}
-                </section>
-              </main>
-          </div>
-        </div>
-      {% endblock %}
+      {% endif %}
     </div>
-    <footer class="site-footer bg-light text-dark">
-      {% block footer %}
-        <div class="container">
-          <div class="row">
-            {% if page.footer_first or page.footer_second %}
-              <div class="col-sm-6">
-                {{ page.footer_first }}
-              </div>
-              <div class="col-sm-6">
-                {{ page.footer_second }}
-              </div>
-            {% endif %}
-          </div>
-        </div>
-      {% endblock %}
-    </footer>
+  </nav>
+</header>
+{% set tabs = page.tabs|render %}
+{% if tabs %}
+  <div class="bg-light" role="navigation">
+    {{ tabs }}
   </div>
-</div>
+{% endif %}
+{% set messages = page.messages|render %}
+{% if messages %}
+  {{ page.messages }}
+{% endif %}
+{% set pre_content = page.pre_content|render %}
+{% if pre_content %}
+  <section class="container">
+    {{ page.pre_content }}
+  </section>
+{% endif %}
+<main class="mt-4 main-content container row-offcanvas row-offcanvas-left" id="content" role="main">
+  {{ page.content }}
+</main>
+<footer class="site-footer bg-light text-dark">
+  <div class="container">
+    <div class="row">
+      {% if page.footer_first or page.footer_second %}
+        <div class="col-sm-6">
+          {{ page.footer_first }}
+        </div>
+        <div class="col-sm-6">
+          {{ page.footer_second }}
+        </div>
+      {% endif %}
+    </div>
+  </div>
+</footer>
