POWR-635 clean up _form.scss

--- a/web/themes/custom/tweme/scss/components/_form.scss
+++ b/web/themes/custom/tweme/scss/components/_form.scss
@@ -3,39 +3,39 @@
  * Visual styles for Tweme's form components.
  */
 
-input[type="search"] {
-  box-sizing: border-box;
-  border-radius: .3rem 0 0 .3rem;
-  flex: 1 1 auto;
-  @extend .form-control;
+.search-api-page-block-form form {
+   @extend .d-flex;
+   @extend .input-group-sm;
+ }
+
+.path-frontpage .search-api-page-block-form form,
+.path-search .search-api-page-block-form form {
+  margin: 4rem 0 1rem;
+  @extend .input-group-lg;
 }
 
-#search-api-page-block-form input.form-submit,
-#search-api-page-block-form--2 input.form-submit {
+.search-api-page-block-form form .form-actions{
+  @extend .input-group-append;
+}
+
+.form-search {
+  @extend .form-control;
+  border: 1px solid #ced4da;
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+  margin: 0;
+}
+
+.path-frontpage .form-search,
+.path-search .form-search {
+  @extend .form-control-lg;
+}
+
+.search-api-page-block-form form input.form-submit {
   color: #505050;
   background: $light;
   border: 1px solid #ced4da;
   border-top-right-radius: .3rem;
   border-bottom-right-radius: .3rem;
-}
-
-#search-api-page-block-form .form-item,
-#search-api-page-block-form--2 .form-item,
-#search-api-page-block-form .form-actions,
-#search-api-page-block-form--2 .form-actions {
   margin: 0;
-}
-
-#search-api-page-block-form .form-actions,
-#search-api-page-block-form--2 .form-actions {
-  @extend .input-group-append;
-}
-
-#search-api-page-block-form,
-#search-api-page-block-form--2 {
-  @extend .d-flex;
-}
-
-.path-frontpage #search-api-page-block-form {
-  margin: 4rem 0;
 }
