--- a/web/themes/custom/tweme/scss/components/_form.scss
+++ b/web/themes/custom/tweme/scss/components/_form.scss
@@ -3,15 +3,9 @@
  * Visual styles for Tweme's form components.
  */
 
-.search-api-page-block-form form {
-   @extend .d-flex;
-   @extend .input-group-sm;
- }
-
 .path-frontpage .search-api-page-block-form form,
 .path-search .search-api-page-block-form form {
   margin: 4rem 0 1rem;
-  @extend .input-group-lg;
 }
 
 .search-api-page-block-form form .form-actions{
@@ -19,23 +13,45 @@
 }
 
 .form-search {
-  @extend .form-control;
   border: 1px solid #ced4da;
-  border-top-right-radius: 0 !important;
-  border-bottom-right-radius: 0 !important;
+  border-radius: .3rem 0 0 .3rem !important;
   margin: 0;
 }
 
 .path-frontpage .form-search,
-.path-search .form-search {
+.path-search .form-search 
+.path-frontpage .form-action,
+.path-search .form-action {
   @extend .form-control-lg;
+  flex: 1 1 auto;
+}
+
+.search-api-page-block-form form .form-item
+{
+  flex: 1 1 auto;
+  margin: 0;
+  @extend .d-flex;
+}
+
+
+.search-api-page-block-form form .form-action,
+.search-api-page-block-form form .form-actions {
+  margin: 0;
 }
 
 .search-api-page-block-form form input.form-submit {
   color: #505050;
   background: $light;
   border: 1px solid #ced4da;
-  border-top-right-radius: .3rem;
-  border-bottom-right-radius: .3rem;
+  border-radius: 0 .3rem .3rem 0;
   margin: 0;
+}
+
+.path-frontpage .form-submit,
+.path-search .form-submit {
+  padding: 0 2rem;
+}
+
+.search-api-page-block-form {
+  margin: 0 !important;
 }
