--- a/web/themes/custom/tweme/scss/_components.scss
+++ b/web/themes/custom/tweme/scss/_components.scss
@@ -17,6 +17,8 @@
 @import "components/_node";
 @import "components/_site-footer";
 @import "components/_skip-link";
+@import "components/_tables";
+@import "components/_tablesort-indicator";
 @import "components/_tabs";
 @import "components/_textarea";
 @import "components/_user";
