POWR-635 a couple more form and table udpates.

--- a/web/themes/custom/tweme/scss/components/_form.scss
+++ b/web/themes/custom/tweme/scss/components/_form.scss
@@ -3,6 +3,20 @@
  * Visual styles for Tweme's form components.
  */
 
+ .form--inline {
+   @extend .form-inline;
+ }
+
+ .button {
+   @extend .btn;
+   @extend .btn-outline-primary;
+ }
+
+.views-table {
+  width: 100%;
+  @extend container-fluid;
+}
+
 .path-frontpage .search-api-page-block-form form,
 .path-search .search-api-page-block-form form {
   margin: 4rem 0 1rem;
