--- a/web/themes/custom/tweme/scss/components/_form.scss
+++ b/web/themes/custom/tweme/scss/components/_form.scss
@@ -9,7 +9,7 @@
 
  .button {
    @extend .btn;
-   @extend .btn-outline-primary;
+   @extend .btn-primary;
  }
 
 .path-frontpage .search-api-page-block-form form,
@@ -42,10 +42,14 @@
   @extend .d-flex;
 }
 
-
-.search-api-page-block-form form .form-action,
-.search-api-page-block-form form .form-actions {
+.form-item,
+.form-action,
+.form-actions {
   margin: 0;
+}
+
+form.views-exposed-form {
+  margin-bottom: 2rem;
 }
 
 .search-api-page-block-form form input.form-submit {
@@ -63,4 +67,8 @@
 
 .search-api-page-block-form {
   margin: 0 !important;
+}
+
+.form-actions {
+  @extend .align-self-end;
 }
