POWR-635 add some exceptions to make edit form look better.

--- a/web/themes/custom/tweme/scss/components/_form.scss
+++ b/web/themes/custom/tweme/scss/components/_form.scss
@@ -42,13 +42,13 @@
   @extend .d-flex;
 }
 
-.form-item,
-.form-action,
-.form-actions {
+.search-api-page-block-form .form-item,
+.search-api-page-block-form .form-action,
+.search-api-page-block-form .form-actions {
   margin: 0;
 }
 
-form.views-exposed-form {
+.views-exposed-form form {
   margin-bottom: 2rem;
 }
 
@@ -69,6 +69,6 @@ form.views-exposed-form {
   margin: 0 !important;
 }
 
-.form-actions {
+.views-exposed-form .form-actions {
   @extend .align-self-end;
 }
