POWR-639 change a couple of classes to make homepage match alpha.

--- a/web/themes/custom/tweme/scss/_overrides.scss
+++ b/web/themes/custom/tweme/scss/_overrides.scss
@@ -236,13 +236,13 @@ td .form-check-input {
 
 // Homepage customizations
 
-.block-region-actions .icon,
-.block-region-audiences .icon {
+.view-community-actions .icon,
+.view-audiences-homepage .icon {
   font-size: 3rem;
 }
 
-.block-region-actions .list-group-item-action,
-.block-region-audiences .list-group-item-action {
+.view-community-actions .list-group-item-action,
+.view-audiences-homepage .list-group-item-action {
   color: $link-color;
 }
 
