--- a/web/themes/custom/tweme/scss/components/_item-list.scss
+++ b/web/themes/custom/tweme/scss/components/_item-list.scss
@@ -34,8 +34,8 @@
     padding: 0;
 }
 
-.block-region-actions .item-list ul li:last-child,
-.block-region-audiences .item-list ul li:last-child {
+.view-community-actions .item-list ul li:last-child,
+.view-audiences-homepage .item-list ul li:last-child {
     @media (min-width: 992px) {
     /* This is needed to reset styles in item-list.theme.css */
     margin: 0;
@@ -44,8 +44,8 @@
     }
 }
 
-.block-region-actions .item-list ul li,
-.block-region-audiences .item-list ul li {
+.view-community-actions .item-list ul li,
+.view-audiences-homepage .item-list ul li {
     @media (max-width: 991.98px) {
     /* This is needed to reset styles in item-list.theme.css */
     margin: 0;
