--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -1,16 +1,74 @@
 /**
  * @file
- * Visual styles for Bootstrap Barrio's form components.
+ * Visual styles for Tweme's form components.
  */
 
-.form-required::after {
-    content: '';
-    vertical-align: super;
-    display: inline-block;
-    background-image: url(../../images/required.svg);
-    background-repeat: no-repeat;
-    background-size: ($input-height / 2) ($input-height / 2);
-    width: ($input-height / 2);
-    height: ($input-height / 2);
-    margin: 0 0.3em;
+ .form--inline {
+   @extend .form-inline;
+ }
+
+ .button {
+   @extend .btn;
+   @extend .btn-primary;
+ }
+
+.path-frontpage .search-api-page-block-form form,
+.path-search .search-api-page-block-form form {
+  margin: 4rem 0 1rem;
+}
+
+.search-api-page-block-form form .form-actions{
+  @extend .input-group-append;
+}
+
+.form-search {
+  border: 1px solid #ced4da;
+  border-radius: .3rem 0 0 .3rem !important;
+  margin: 0;
+}
+
+.path-frontpage .form-search,
+.path-search .form-search 
+.path-frontpage .form-action,
+.path-search .form-action {
+  @extend .form-control-lg;
+  flex: 1 1 auto;
+}
+
+.search-api-page-block-form form .form-item
+{
+  flex: 1 1 auto;
+  margin: 0;
+  @extend .d-flex;
+}
+
+.search-api-page-block-form .form-item,
+.search-api-page-block-form .form-action,
+.search-api-page-block-form .form-actions {
+  margin: 0;
+}
+
+.views-exposed-form form {
+  margin-bottom: 2rem;
+}
+
+.search-api-page-block-form form input.form-submit {
+  color: #505050;
+  background: $light;
+  border: 1px solid #ced4da;
+  border-radius: 0 .3rem .3rem 0;
+  margin: 0;
+}
+
+.path-frontpage .form-submit,
+.path-search .form-submit {
+  padding: 0 2rem;
+}
+
+.search-api-page-block-form {
+  margin: 0 !important;
+}
+
+.views-exposed-form .form-actions {
+  @extend .align-self-end;
 }
