--- a/web/themes/custom/cloudy/scss/components/_tablesort-indicator.scss
+++ b/web/themes/custom/cloudy/scss/components/_tablesort-indicator.scss
@@ -4,14 +4,23 @@
  */
 
 .tablesort {
-  width: 14px;
-  height: 14px;
-  vertical-align: top;
-  margin: 1px 0 0 5px;
+  float: right; /* LTR */
+  margin-top: 5px;
+  width: 10px;
+  height: 10px;
+}
+[dir="rtl"] .tablesort {
+  float: left;
 }
 .tablesort--asc {
-  background-image: url(../../../../misc/icons/ffffff/twistie-down.svg);
+  background-image: url(../../../core/misc/icons/004875/twistie-down.svg);
+}
+a:hover .tablesort--asc {
+  background-image: url(../../../core/misc/icons/008ee6/twistie-down.svg);
 }
 .tablesort--desc {
-  background-image: url(../../../../misc/icons/ffffff/twistie-up.svg);
+  background-image: url(../../../core/misc/icons/004875/twistie-up.svg);
+}
+a:hover .tablesort--desc {
+  background-image: url(../../../core/misc/icons/008ee6/twistie-up.svg);
 }
