--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Bootstrap Barrio's theme implementation to display a single page.
+ * Portland.gov theme implementation to display a single page.
  *
  * The doctype, html, head and body tags are not in this template. Instead they
  * can be found in the html.html.twig template normally located in the
@@ -32,153 +32,67 @@
  *   page's path (e.g. node/12345 and node/12345/revisions, but not
  *   comment/reply/12345).
  *
- * Regions:
- * - page.top_header: Items for the top header region.
- * - page.top_header_form: Items for the top header form region.
- * - page.header: Items for the header region.
- * - page.header_form: Items for the header form region.
- * - page.highlighted: Items for the highlighted region.
- * - page.primary_menu: Items for the primary menu region.
- * - page.secondary_menu: Items for the secondary menu region.
- * - page.featured_top: Items for the featured top region.
- * - page.content: The main content of the current page.
- * - page.sidebar_first: Items for the first sidebar.
- * - page.sidebar_second: Items for the second sidebar.
- * - page.featured_bottom_first: Items for the first featured bottom region.
- * - page.featured_bottom_second: Items for the second featured bottom region.
- * - page.featured_bottom_third: Items for the third featured bottom region.
- * - page.footer_first: Items for the first footer column.
- * - page.footer_second: Items for the second footer column.
- * - page.footer_third: Items for the third footer column.
- * - page.footer_fourth: Items for the fourth footer column.
- * - page.footer_fifth: Items for the fifth footer column.
- * - page.breadcrumb: Items for the breadcrumb region.
- *
- * Theme variables:
- * - navbar_top_attributes: Items for the header region.
- * - navbar_attributes: Items for the header region.
- * - content_attributes: Items for the header region.
- * - sidebar_first_attributes: Items for the highlighted region.
- * - sidebar_second_attributes: Items for the primary menu region.
- * - sidebar_collapse: If the sidebar_first will collapse.
- *
- * @see template_preprocess_page()
- * @see bootstrap_barrio_preprocess_page()
- * @see html.html.twig
  */
 #}
-<div id="page-wrapper">
-  <div id="page">
-    <div class="container-fluid">{{ page.top_header }}</div>
-    <a href="#main" class="visually-hidden focusable skip-link">
-        {{ 'Skip to main content'|t }}
-    </a>
-    <header id="header" class="header" aria-label="{{ 'Site header'|t}}" role="banner">
-      {% block head %}
-        <nav{{ navbar_attributes }}>
-          {% if container_navbar %}
-          <div class="container">
+{% set global_admin = page.global_admin|render %}
+{% if global_admin %}
+  {{ page.global_admin }}
+{% endif %}
+<section>
+  {{ page.pre_header }}
+</section>
+<a href="#main" class="visually-hidden focusable skip-link">
+    {{ 'Skip to main content'|t }}
+</a>
+<header id="header" class="header" aria-label="{{ 'Site header'|t}}" role="banner">
+  <nav class="navbar navbar-dark navbar-expand-lg" id="navbar-main">
+    <div class="container">
+      {{ page.header }}
+      {% if page.primary_menu or page.header_form %}
+        <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="{{ 'Toggle navigation'|t }}">{{ 'Menu'|t }}</button>
+        <div class="collapse navbar-collapse justify-content-end" id="CollapsingNavbar">
+          {{ page.primary_menu }}
+          {% set header_form = page.header_form|render %}
+          {% if header_form %}
+            <div class="form-inline navbar-form">
+              {{ page.header_form }}
+            </div>
           {% endif %}
-            {{ page.header }}
-            {% if page.primary_menu or page.header_form %}
-              <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation">Menu</button>
-              <div class="collapse navbar-collapse justify-content-end" id="CollapsingNavbar">
-                {{ page.primary_menu }}
-                {% if page.header_form %}
-                  <div class="form-inline navbar-form">
-                    {{ page.header_form }}
-                  </div>
-                {% endif %}
-	          </div>
-            {% endif %}
-          {% if container_navbar %}
-          </div>
-          {% endif %}
-        </nav>
-      {% endblock %}
-    </header>
-    {% if page.banner_top %}
-      <header id="banner" class="banner" role="banner" aria-label="{{ 'Top Banner'|t }}">
-          {{ page.banner_top }}
-      </header>
-    {% endif %}
-    {% if page.featured_top %}
-      {% block featured %}
-        <div class="featured-top pt-3 pb-3">
-          <aside class="featured-top__inner section {{ container }} clearfix" role="complementary">
-            {{ page.featured_top }}
-          </aside>
         </div>
-      {% endblock %}
-    {% endif %}
-    {% set tabs = page.tabs|render %}
-    {% if tabs %}
-      {% block tabs %}
-        <div class="tabs container-fluid bg-light" role="navigation">
-          {{ tabs }}
-        </div>
-      {% endblock %}
-    {% endif %}
-    {% if page.highlighted %}
-      <div class="highlighted">
-        <aside class="{{ container }} section clearfix" role="complementary">
-          {{ page.highlighted }}
-        </aside>
-      </div>
-    {% endif %}
-    <div id="main-wrapper" class="layout-main-wrapper clearfix">
-      {% block content %}
-        <div id="main" class="{{ container }}">
-          <div class="row row-offcanvas row-offcanvas-left clearfix">
-              <main{{ content_attributes }}>
-                <section class="section">
-                  {{ page.content }}
-                </section>
-              </main>
-            {% set sidebar_first = page.sidebar_first|render %}
-            {% if page.sidebar_first %}
-              <div{{ sidebar_first_attributes }}>
-                <aside class="section" role="complementary">
-                  {{ page.sidebar_first }}
-                </aside>
-              </div>
-            {% endif %}
-            {% set sidebar_second = page.sidebar_second|render %}
-            {% if sidebar_second %}
-               <div{{ sidebar_second_attributes }}>
-                <aside class="section" role="complementary">
-                  {{ sidebar_second }}
-                </aside>
-              </div>
-            {% endif %}
-          </div>
-        </div>
-      {% endblock %}
+      {% endif %}
     </div>
-    {% if page.featured_bottom_first or page.featured_bottom_second or page.featured_bottom_third %}
-      <div class="featured-bottom">
-        <aside class="{{ container }} clearfix" role="complementary">
-          {{ page.featured_bottom_first }}
-          {{ page.featured_bottom_second }}
-          {{ page.featured_bottom_third }}
-        </aside>
-      </div>
-    {% endif %}
-    <footer class="site-footer bg-light text-dark">
-      {% block footer %}
-        <div class="container">
-          <div class="row">
-            {% if page.footer_first or page.footer_second %}
-              <div class="col-sm-6">
-                {{ page.footer_first }}
-              </div>
-              <div class="col-sm-6">
-                {{ page.footer_second }}
-              </div>
-            {% endif %}
-          </div>
-        </div>
-      {% endblock %}
-    </footer>
+  </nav>
+</header>
+{% set tabs = page.tabs|render %}
+{% if tabs %}
+  <div class="bg-light" role="navigation">
+    {{ tabs }}
   </div>
-</div>
+{% endif %}
+{% set messages = page.messages|render %}
+{% if messages %}
+  {{ page.messages }}
+{% endif %}
+{% set pre_content = page.pre_content|render %}
+{% if pre_content %}
+  <section class="container">
+    {{ page.pre_content }}
+  </section>
+{% endif %}
+<main class="mt-4 main-content container row-offcanvas row-offcanvas-left" id="content" role="main">
+  {{ page.content }}
+</main>
+<footer class="site-footer bg-light text-dark">
+  <div class="container">
+    <div class="row">
+      {% if page.footer_first or page.footer_second %}
+        <div class="col-sm-6">
+          {{ page.footer_first }}
+        </div>
+        <div class="col-sm-6">
+          {{ page.footer_second }}
+        </div>
+      {% endif %}
+    </div>
+  </div>
+</footer>
