--- a/web/themes/custom/cloudy/templates/navigation/breadcrumb.html.twig
+++ b/web/themes/custom/cloudy/templates/navigation/breadcrumb.html.twig
@@ -7,10 +7,9 @@
  * - breadcrumb: Breadcrumb trail items.
  */
 #}
-{{ attach_library('bootstrap_barrio/breadcrumb') }}
 
 {% if breadcrumb %}
-  <nav class="d-flex m-0" role="navigation" aria-label="breadcrumb">
+  <nav class="container m-0 p-0" role="navigation" aria-label="breadcrumb">
     <h2 id="system-breadcrumb" class="visually-hidden">{{ 'Breadcrumb'|t }}</h2>
     <ol class="breadcrumb">
     {% for item in breadcrumb %}
