POWR-644 update blocks and apply a fix for media browsing and img-fluid conflict.

--- a/web/themes/custom/cloudy/scss/components/_tables.scss
+++ b/web/themes/custom/cloudy/scss/components/_tables.scss
@@ -150,3 +150,8 @@ th.select-all {
     display: none;
   }
 }
+
+/* TODO: There is probably a better way to do this. */
+td.views-field-thumbnail__target-id {
+  width: 110px;
+}
