TWEME fix block layout order; update color for paragraphs dropdown; override flex from .media

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -371,3 +371,15 @@ span.mailto::before {
 h2, h3, h4, h5, h6, p, blockquote, hr, .list-group-item, .paragraph ul, .paragraph ol, .figure-caption {
   max-width: 729px;
 }
+
+/* TODO: Fix the media flex issue that inherits from Classy */
+.media {
+  display: inherit !important;
+}
+
+/* TODO: Find a better place for this override and improve color;
+issue is caused by inheriting .button */
+
+.paragraphs-dropdown-action.button {
+  color: $gray-500;
+}
