POWR-620 found the right config for HTML Purifier to allow embedded video player; fixed a markup error in the document--embedded twig template.

--- a/web/themes/custom/cloudy/templates/content/media--document--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/content/media--document--embedded.html.twig
@@ -46,7 +46,7 @@
 {% set filetype = content.field_mime_type[0]['#context']['value'] %}
 
 <div {{ attributes }}>
-  <div class="document-name">{{ content.name.0 }}</a>
+  <div class="document-name">{{ content.name.0 }}</div>
   <div class="document-link">
     {% if filetype == 'application/pdf' %}
       <i class="fas fa-file-pdf"></i>
