TWEME update the blocks for messaging—disabled for some reason; paragraph actions dropdown

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -380,6 +380,6 @@ h2, h3, h4, h5, h6, p, blockquote, hr, .list-group-item, .paragraph ul, .paragra
 /* TODO: Find a better place for this override and improve color;
 issue is caused by inheriting .button */
 
-.paragraphs-dropdown-action.button {
-  color: $gray-500;
+.paragraphs-dropdown-actions {
+  background-color: $primary;
 }
