POWR-620 - embed button icon images, reconfigured text format so that <iframe> no longer needs to be explicitly allowed, removed Media Entity view test displays, tweaks to document templates.

--- a/web/themes/custom/cloudy/templates/content/media--document.html.twig
+++ b/web/themes/custom/cloudy/templates/content/media--document.html.twig
@@ -49,9 +49,8 @@
 {% set changed = content.created['#object'].get('changed')[0].value | date('m/d/Y g:i:s a') %}
 
 <div {{ attributes }}>
-  <h1>{{ content.name.0 }}</h1>
+  {# <h1>{{ content.name.0 }}</h1> #}
   {{ content.field_summary }}
-
 
   {% if filetype == 'application/pdf' %}
     <i class="fas fa-file-pdf">&nbsp;</i>
@@ -64,7 +63,7 @@
   {% else %}
     <i class="fas fa-file">&nbsp;</i>
   {% endif %}
-  <a href="{{ doc_url }}">{{ filename }}</a> ({{ size }})<br>
+  <a href="{{ doc_url }}">{{ filename }}</a> {% if bytes > 1 %}({{ size }}){% endif %}<br>
   Created on {{ content.created.0 }} by {{ content.uid.0 }}
   <br>Updated on {{ changed }}
 </div>
