--- a/web/themes/custom/cloudy/templates/content/media--document--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/content/media--document--embedded.html.twig
@@ -59,5 +59,5 @@
   {% else %}
     <i class="fas fa-file">&nbsp;</i>
   {% endif %}
-  <a href="{{ doc_url }}">{{ filename }}</a> ({{ size }})
+  <a href="{{ doc_url }}">{{ filename }}</a> {% if bytes > 1 %}({{ size }}){% endif %}
 </div>
