--- a/web/themes/custom/cloudy/templates/content/media--document--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/content/media--document--embedded.html.twig
@@ -48,7 +48,7 @@
 {% set filename = content.field_document[0]['#file'].get('filename')[0].value %}
 
 <div {{ attributes }}>
-  {% if filetype == 'application/pdf' %}
+  <p>{% if filetype == 'application/pdf' %}
     <i class="fas fa-file-pdf">&nbsp;</i>
   {% elseif filetype == 'application/msword' or filetype == 'application/vnd.openxmlformats-officedocument.wordprocessingml.document' %}
     <i class="fas fa-file-word">&nbsp;</i>
@@ -59,5 +59,5 @@
   {% else %}
     <i class="fas fa-file">&nbsp;</i>
   {% endif %}
-  <a href="{{ doc_url }}">{{ filename }}</a> {% if bytes > 1 %}({{ size }}){% endif %}
+  <a href="{{ doc_url }}">{{ filename }}</a> {% if bytes > 1 %}({{ size }}){% endif %}</p>
 </div>
