--- a/web/themes/custom/cloudy/templates/content/node--news.html.twig
+++ b/web/themes/custom/cloudy/templates/content/node--news.html.twig
@@ -59,20 +59,7 @@
  * @see template_preprocess_node()
  */
 #}
-{{ attach_library('bootstrap_barrio/node') }}
-
-{%
-  set classes = [
-    'node',
-    'node--type-' ~ node.bundle|clean_class,
-    node.isPromoted() ? 'node--promoted',
-    node.isSticky() ? 'node--sticky',
-    not node.isPublished() ? 'node--unpublished',
-    view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
-    'clearfix',
-  ]
-%}
-<article{{ attributes.addClass(classes) }}>
+<article{{ attributes }}>
   <header>
     {{ title_prefix }}
     {% if not page %}
