POWR-620 - moved document icon inside of link

--- a/web/themes/custom/cloudy/templates/content/media--document.html.twig
+++ b/web/themes/custom/cloudy/templates/content/media--document.html.twig
@@ -52,7 +52,7 @@
   {# <h1>{{ content.name.0 }}</h1> #}
   {{ content.field_summary }}
 
-  {% if filetype == 'application/pdf' %}
+  <a href="{{ doc_url }}">{% if filetype == 'application/pdf' %}
     <i class="fas fa-file-pdf">&nbsp;</i>
   {% elseif filetype == 'application/msword' or filetype == 'application/vnd.openxmlformats-officedocument.wordprocessingml.document' %}
     <i class="fas fa-file-word">&nbsp;</i>
@@ -62,8 +62,7 @@
     <i class="fas fa-file-powerpoint">&nbsp;</i>
   {% else %}
     <i class="fas fa-file">&nbsp;</i>
-  {% endif %}
-  <a href="{{ doc_url }}">{{ filename }}</a> {% if bytes > 1 %}({{ size }}){% endif %}<br>
+  {% endif %} {{ filename }}</a> {% if bytes > 1 %}({{ size }}){% endif %}<br>
   Created on {{ content.created.0 }} by {{ content.uid.0 }}
   <br>Updated on {{ changed }}
 </div>
