POWR-643 Add badges to service sitewide teaser template and ghost badge styling

--- a/web/themes/custom/cloudy/scss/_mixins.scss
+++ b/web/themes/custom/cloudy/scss/_mixins.scss
@@ -20,6 +20,29 @@
 /* MIXINS */
 
 //
+// Alternate badges
+//
+@mixin badge-variant($bg) {
+  color: $bg;
+  background-color: transparent;
+  border: 1px solid $bg;
+
+  &[href] {
+    @include hover-focus {
+      background-color: $bg;
+      color: $white;
+      text-decoration: none;
+    }
+  }
+}
+
+@each $color, $value in $theme-colors {
+  .badge-#{$color}--ghost {
+    @include badge-variant($value);
+  }
+}
+
+//
 // Alternate buttons
 //
 @each $color,
