--- a/web/themes/custom/cloudy/templates/content/city-service/node--city-service--search-result.html.twig
+++ b/web/themes/custom/cloudy/templates/content/city-service/node--city-service--search-result.html.twig
@@ -59,25 +59,25 @@
  * @see template_preprocess_node()
  */
 #}
-<div {{ attributes.addclass('mb-5') }}>
-  <h2 {{ title_attributes }}>
+<div{{ attributes.addclass('mb-5') }}>
+  <h2{{ title_attributes }}>
     <a href="{{ url }}" rel="bookmark">{{ label }}</a>
   </h2>
-  <div {{ content_attributes }}>
+  <div{{ content_attributes }}>
     {{ content.field_summary }}
     {% if node.type.entity.label or node.field_topics.value %}
-      <div class="badges">
+      <div{{ attributes.addClass('badges') }}>
         {% spaceless %}
-          <a href="{{ url('view.services_index.page_1') }}" class="badge badge-primary mr-1">{{ node.type.entity.label }}</a>
-          {% for i, value in node.field_topics %}
+          {% if node.type.entity.label %}
+            <a href="{{ url('view.services_index.page_1') }}" class="badge badge-primary mr-1">{{ node.type.entity.label }}</a>
+          {% endif %}
+          {% for i, topic in node.field_topics %}
             {% if node.field_topics[i].entity %}
-              {%
-                set topic = {
-                  url: path('entity.taxonomy_term.canonical', {'taxonomy_term': node.field_topics[i].entity.id}),
-                  title: node.field_topics[i].entity.name.value
-                }
-              %}
-              <a href="{{ topic.url }}" class="badge badge-primary mr-1">{{ topic.title }}</a>
+              {% set topic = {
+                url: path('entity.taxonomy_term.canonical', {'taxonomy_term': node.field_topics[i].entity.id}),
+                title: node.field_topics[i].entity.name.value,
+              }%}
+              <a href="{{ topic.url }}" class="badge badge-primary--ghost mr-1">{{ topic.title }}</a>
             {% endif %}
           {% endfor %}
         {% endspaceless %}
