POWR-633 Add padding to ".postal-code"

--- a/web/themes/custom/cloudy/scss/components/_field.scss
+++ b/web/themes/custom/cloudy/scss/components/_field.scss
@@ -135,3 +135,7 @@
 div.paragraph--type--video figure.figure, div.paragraph--type--audio figure.figure {
     width: 100%;
 }
+
+span.postal-code {
+    padding-left: $spacer * 0.5;
+}
