POWR-602 - test whether document content should be displayed (due to permissions) before manually pulling details out of the paragraph object; fixes bug where unpublished documents being displayed for anon and outsider roles.

--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--document.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--document.html.twig
@@ -1,6 +1,10 @@
 {% extends 'paragraph.html.twig' %}
 {% block content %}
+{# drawing document properties directly from paragraph object bypasses permissions checks, so
+   we need to check the content of the field in the content object before displaying it #}
+{% if (content.field_document.0) %}
 <a href="{{ fileUrl }}">
 <i class="fas fa-{{ fontawesomeIcon }}"></i> {{ paragraph.field_document.entity.getName() }}
 </a> ({{ fileSize }})
+{% endif %}
 {% endblock %}
