POWR-665 hotfix to get search form on search pages.

--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -28,7 +28,7 @@
 }
 
 .path-frontpage .form-search,
-.path-search .form-search 
+.path-search .form-search, 
 .path-frontpage .form-action,
 .path-search .form-action {
   @extend .form-control-lg;
